WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74041
WebPImageDecoder should not do a full image decode if progressive decoding is active
https://bugs.webkit.org/show_bug.cgi?id=74041
Summary
WebPImageDecoder should not do a full image decode if progressive decoding is...
noel gordon
Reported
2011-12-07 17:35:33 PST
If decoder input data state reaches allDataReceived during a progressive image decode, the decoder performs full image decode. The decoder should just continue with, and complete, the current progressive decode.
Attachments
Patch
(1.80 KB, patch)
2011-12-07 17:52 PST
,
noel gordon
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
noel gordon
Comment 1
2011-12-07 17:52:55 PST
Created
attachment 118295
[details]
Patch
WebKit Review Bot
Comment 2
2011-12-07 20:58:17 PST
Comment on
attachment 118295
[details]
Patch Clearing flags on attachment: 118295 Committed
r102310
: <
http://trac.webkit.org/changeset/102310
>
WebKit Review Bot
Comment 3
2011-12-07 20:58:21 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug